--- a/DIvisionTask1/Division.html
+++ b/DIvisionTask1/Division.html
@@ -9,9 +9,16 @@
 </head>
 <body>
     <div class="main-div">
-        <div class="div1"></div>
-        <div class="div2"></div>
-        <div class="div3"></div>
+        <div class="div1">
+            <h2>ANAND </h2>
+        </div>
+        <div class="div2">
+            <h2>DEV DAS </h2>
+            
+        </div>
+        <div class="div3">
+            <h2>DEEWAR</h2>
+        </div>
     </div>
     
 </body>
